@@ -98,6 +98,10 @@ private:
   void _addNuggetOnResult(VectorDouble &result);
   void _addDrift(Db* db, VectorDouble &result, int ivar = 0, bool useSel = true);
   void _setUseCholesky(int useCholesky = -1, bool verbose = false);
+  void _projecLocal(Db *dbout,
+                    const AMesh *meshing,
+                    VectorDouble &working,
+                    VectorDouble &result);
 
 private:
   const Db*                    _data; // External Pointer
@@ -131,10 +135,11 @@ GSTLEARN_EXPORT int krigingSPDE(Db *dbin,
                                 Model *model,
                                 bool flag_est = true,
                                 bool flag_std = false,
-                                bool flag_varz = false,
                                 const AMesh* mesh = nullptr,
                                 int useCholesky = -1,
                                 SPDEParam params = SPDEParam(),
+                                int nbMC = 10,
+                                int seed = 42331,
                                 bool verbose = false,
                                 bool showStats = false,
                                 const NamingConvention &namconv = NamingConvention("KrigingSPDE"));
