@@ -78,7 +78,7 @@ int main(int argc, char *argv[])
   (void) dat->dumpToNF("Data.ascii");
 
   // Testing Kriging (with SPDE)
-  (void) krigingSPDE(dat, grid, model, true, false, false, nullptr, useCholesky, SPDEParam());
+  (void) krigingSPDE(dat, grid, model, true, false, nullptr, useCholesky, SPDEParam());
 
   // Testing Kriging (traditional method)
   (void) kriging(dat, grid, model, neighU);
